# Task

./: README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_diff_robot/lib/my_diff_robot/: safety_node.py  simple_teleop.py
install/my_diff_robot/share/ament_index/resource_index/package_run_dependencies/: my_diff_robot
install/my_diff_robot/share/ament_index/resource_index/parent_prefix_path/: my_diff_robot
install/my_diff_robot/share/my_diff_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_diff_robot/share/my_diff_robot/cmake/: my_diff_robotConfig-version.cmake  my_diff_robotConfig.cmake
install/my_diff_robot/share/my_diff_robot/config/: controllers.yaml  gz_bridge.yaml
install/my_diff_robot/share/my_diff_robot/environment/: ament_prefix_path.dsv  path.dsv
install/my_diff_robot/share/my_diff_robot/launch/: robot.launch.py
install/my_diff_robot/share/my_diff_robot/rviz/: robot.rviz
install/my_diff_robot/share/my_diff_robot/urdf/: robot.urdf
install/my_diff_robot/share/my_diff_robot/worlds/: empty.sdf
log/: latest_build
src/my_diff_robot/: CMakeLists.txt  run_robot.sh
src/my_diff_robot/config/: controllers.yaml
src/my_diff_robot/launch/: robot.launch.py
src/my_diff_robot/scripts/: safety_node.py  simple_teleop.py
